--- a/Social-Souls/src/Landing.css
+++ b/Social-Souls/src/Landing.css
@@ -4,6 +4,8 @@ body {
   background-color: #262626;
   margin: 0;
   padding: 0;
+  z-index:0;
+  
 }
 
 @font-face {
@@ -53,146 +55,120 @@ body {
   bottom: 30px;
 }
 
-.form-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 20px;
+
+.container {
+  width: 400px;
+  height:500px;
+  position: absolute;
+  left:50%;
+  border-radius: 5px;
+  overflow: hidden;
+  color: white;
+  transform: translate(-50%);
+  box-shadow: 1.5px 1.5px 3px #0e0e0e, -1.5px -1.5px 3px rgb(95 94 94 / 25%), inset 0px 0px 0px #0e0e0e, inset 0px -0px 0px #5f5e5e;
 }
 
+
+.container .slider {
+  width: 200%;
+  position: relative;
+  transition: transform ease-out 0.3s;
+  display: flex;
+}
+
+#register_toggle {
+  display: none;
+}
+
+.container #register_toggle:checked + .slider {
+  transform: translateX(-50%);
+}
 
 .form {
-  position: relative;
-  width: 300px;
-  height: 400px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transform-style: preserve-3d;
-  transition: transform 1s ease; /* Smooth rotation transition */
-}
-
-.form .form_front,
-.form .form_back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 20px;
-  backface-visibility: hidden; /* Hide the back side when not facing the viewer */
-  padding: 65px 45px;
-  border-radius: 15px;
-  box-shadow: inset 2px 2px 10px rgba(0, 0, 0, 1),
-    inset -1px -1px 5px rgba(255, 255, 255, 0.6);
+  gap: 30px;
+  padding: 1.5em 3em;
+  width: 50%;
 }
 
-.form .form_back {
-  transform: rotateY(180deg); /* Rotate the back side 180 degrees */
+.title {
+  text-align: center;
+  font-weight: 700;
+  font-size: 2em;
 }
 
-#signup-toggle {
-  display: none; /* Hide the checkbox */
-  
+form .form_control {
+  width: 100%;
+  position: relative;
+  overflow: hidden;
 }
 
-/* Checkbox checked state to rotate the form */
-#signup-toggle:checked + .form {
-  transform: rotateY(-180deg); /* Rotate the entire form when checked */
-
+form .form_control .label {
+  position: absolute;
+  top: 50%;
+  left: 10px;
+  transition: transform ease 0.2s;
+  transform: translate(0%, -50%);
+  font-size: 0.75em;
+  user-select: none;
+  pointer-events: none;
+  color: #b0b0b0;
 }
 
-/* Hide the form_front when signup is toggled */
-#signup-toggle:checked + .form .form_front {
-  z-index: -1; /* Send the front to the back */
-  opacity: 0; /* Make the front form invisible */
-}
-
-#signup-toggle:checked + .form_back {
-  z-index: -1; /* Send the front to the back */
-  opacity: 0; /* Make the front form invisible */
-}
-
-.form_details {
-  font-size: 25px;
-  font-weight: 600;
-  padding-bottom: 10px;
-  color: white;
-}
-
-.input {
-  width: 245px;
-  min-height: 45px;
-  color: #fff;
+form .form_control .input {
+  width: 100%;
+  background-color: transparent;
+  border: none;
   outline: none;
-  transition: 0.35s;
-  padding: 0px 7px;
-  background-color: #212121;
-  border-radius: 6px;
-  border: 2px solid #212121;
-  box-shadow: 6px 6px 10px rgba(0, 0, 0, 1),
-    1px 1px 10px rgba(255, 255, 255, 0.6);
-}
-
-.input::placeholder {
-  color: #999;
-}
-
-.input:focus::placeholder {
-  transition: 0.3s;
-  opacity: 0;
-}
-
-.input:focus {
-  transform: scale(1.05);
-  box-shadow: 6px 6px 10px rgba(0, 0, 0, 1),
-    1px 1px 10px rgba(255, 255, 255, 0.6),
-    inset 2px 2px 10px rgba(0, 0, 0, 1),
-    inset -1px -1px 5px rgba(255, 255, 255, 0.6);
-}
-
-.btn {
-  padding: 10px 35px;
-  cursor: pointer;
-  background-color: #212121;
-  border-radius: 6px;
-  border: 2px solid #212121;
-  box-shadow: 6px 6px 10px rgba(0, 0, 0, 1),
-    1px 1px 10px rgba(255, 255, 255, 0.6);
   color: #fff;
-  font-size: 15px;
-  font-weight: bold;
-  transition: 0.35s;
+  padding: 0.5rem;
+  font-size: 0.75rem;
+  border-radius: 5px;
+  transition: box-shadow ease 0.2s;
+  box-shadow: 0px 0px 0px #0e0e0e, 0px 0px 0px rgb(95 94 94 / 25%), inset 1.5px 1.5px 3px #0e0e0e, inset -1.5px -1.5px 3px #5f5e5e;
 }
 
-.btn:hover {
-  transform: scale(1.05);
-  box-shadow: 6px 6px 10px rgba(0, 0, 0, 1),
-    1px 1px 10px rgba(255, 255, 255, 0.6),
-    inset 2px 2px 10px rgba(0, 0, 0, 1),
-    inset -1px -1px 5px rgba(255, 255, 255, 0.6);
+form .form_control .input:focus,
+form .form_control .input:valid {
+  box-shadow: 0px 0px 0px #0e0e0e, 0px 0px 0px rgb(95 94 94 / 25%), inset 3px 3px 4px #0e0e0e, inset -3px -3px 4px #5f5e5e;
 }
 
-.btn:focus {
-  transform: scale(1.05);
-  box-shadow: 6px 6px 10px rgba(0, 0, 0, 1),
-    1px 1px 10px rgba(255, 255, 255, 0.6),
-    inset 2px 2px 10px rgba(0, 0, 0, 1),
-    inset -1px -1px 5px rgba(255, 255, 255, 0.6);
+form .form_control .input:focus + .label,
+form .form_control .input:valid + .label {
+  transform: translate(-150%, -50%);
 }
 
-.form .switch {
-  font-size: 13px;
-  color: white;
+form button {
+  width: 100%;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  color: #fff;
+  padding: 0.5rem;
+  font-size: 0.75rem;
+  border-radius: 5px;
+  transition: box-shadow ease 0.1s;
+  box-shadow: 1.5px 1.5px 3px #0e0e0e, -1.5px -1.5px 3px rgb(95 94 94 / 25%), inset 0px 0px 0px #0e0e0e, inset 0px -0px 0px #5f5e5e;
 }
 
-.form .switch .signup_tog {
+form button:active {
+  box-shadow: 0px 0px 0px #0e0e0e, 0px 0px 0px rgb(95 94 94 / 25%), inset 3px 3px 4px #0e0e0e, inset -3px -3px 4px #5f5e5e;
+}
+
+.bottom_text {
+  font-size: 0.65em;
+}
+
+.bottom_text .swtich {
   font-weight: 700;
   cursor: pointer;
-  text-decoration: underline;
 }
+
+
+
 
 
 
