--- a/Social-Souls/src/Landing.css
+++ b/Social-Souls/src/Landing.css
@@ -33,6 +33,12 @@ body {
   src:url(../fonts/NightHalloweenPersonalUseRegular-lgq0e.ttf);
 }
 
+@font-face{
+  font-family: ifont;
+  src:url(../fonts/KeepCheese-nArGP.otf)
+}
+
+
 
 
 #header_container {
@@ -71,7 +77,7 @@ body {
 .description {
   text-align: center;
   font-family: "Agbalumo", system-ui;
-  color: aliceblue;
+  color: rgb(215, 222, 229);
   font-size: 25px;
   position: relative;
   bottom: 30px;
@@ -121,6 +127,7 @@ body {
   font-weight: 700;
   font-size: 2.3em;
   font-family: spook1;
+  color:#ffeedd;
 }
 
 form .form_control {
@@ -143,6 +150,7 @@ form .form_control .label {
 
 .bottom_text{
   text-align: center;
+  color: #d5d4d4;
   font-size: 15px;
   font-weight: 600;
 }
@@ -170,10 +178,11 @@ form .form_control .input:valid + .label {
   transform: translate(-150%, -50%);
 }
 
-form button {
+.form-button {
   width: 100%;
   background-color: transparent;
   border: none;
+  border-radius: 40px;
   outline: none;
   color: #fff;
   padding: 0.5rem;
@@ -225,7 +234,9 @@ form button:active {
   top: 20px;
 }
 
+
 .form__label {
+  font-family: ifont;
   position: absolute;
   top: 0;
   display: block;
@@ -239,17 +250,19 @@ form button:active {
   padding-bottom: 6px;
   font-weight: 700;
   border-width: 3px;
-  border-image: linear-gradient(to right, #116399, #38caef);
+  border-image: linear-gradient(to right, #ff8c19, #f34040);
   border-image-slice: 1;
 }
+
+
 
 .form__field:focus ~ .form__label {
   position: absolute;
   top: 0;
   display: block;
   transition: 0.2s;
-  font-size: 17px;
-  color: #38caef;
+  font-size: 20px;
+  color: #ff8c19;
   font-weight: 700;
 }
 
@@ -266,6 +279,54 @@ form button:active {
   color: #9b9b9b; 
   font-size: 1.2em; 
   pointer-events: none; 
+}
+
+
+.Btn {
+  width: 250px;
+  height: 40px;
+  border: none;
+  border-radius: 10px;
+  background: linear-gradient(to right,#ff870f,#ef5454,#ff870f,#ef5454,#ffd277,#ef5454);
+  background-size: 250%;
+  background-position: left;
+  color: #ffd277;
+  position: relative;
+  display: flex;
+  align-items: right;
+  justify-content: center;
+  cursor: pointer;
+  transition-duration: 1s;
+  overflow: hidden;
+}
+
+.Btn::before {
+  position: absolute;
+  content: "Login";
+  color: #ffd277;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 97%;
+  height: 90%;
+  border-radius: 8px;
+  transition-duration: 1s;
+  background-color: rgba(0, 0, 0, 0.842);
+  background-size: 200%;
+}
+
+.Btn:hover {
+  background-position: right;
+  transition-duration: 1s;
+}
+
+.Btn:hover::before {
+  background-position: right;
+  transition-duration: 0.1s;
+}
+
+.Btn:active {
+  transform: scale(0.8);
 }
 
 
