--- a/Social-Souls/src/Landing.css
+++ b/Social-Souls/src/Landing.css
@@ -38,8 +38,10 @@ body {
   src:url(../fonts/KeepCheese-nArGP.otf)
 }
 
-
-
+@font-face{
+  font-family: sawarabi;
+  src:url(../fonts/SawarabiGothic-Regular.ttf)
+}
 
 #header_container {
   display: flex; 
@@ -117,7 +119,7 @@ body {
   flex-direction: column;
   margin:30px;
   gap: 30px;
-  padding: 1.5em 3em;
+  padding: 1em 3em;
   width: 50%;
 
 }
@@ -134,6 +136,7 @@ form .form_control {
   width: 100%;
   position: relative;
   overflow: hidden;
+
 }
 
 form .form_control .label {
@@ -151,8 +154,9 @@ form .form_control .label {
 .bottom_text{
   text-align: center;
   color: #d5d4d4;
-  font-size: 15px;
+  font-size: 13px;
   font-weight: 600;
+  font-family: sawarabi;
 }
 /* This is a single-line comment */
 form .form_control .input {
@@ -202,7 +206,9 @@ form button:active {
   cursor: pointer;
 }
 
-
+.swtich{
+  text-decoration: underline;
+}
 .form__group {
   position: relative;
   padding: 20px 0 0;
@@ -282,12 +288,18 @@ form button:active {
 }
 
 
-.Btn {
+
+
+.Btn-signup {
   width: 250px;
-  height: 40px;
+  padding-top: 2px;
+  padding-left: 2px;
+  padding-right: 2px;
+  height: 45px;
   border: none;
+  border-top: 8px;
   border-radius: 10px;
-  background: linear-gradient(to right,#ff870f,#ef5454,#ff870f,#ef5454,#ffd277,#ef5454);
+  background: linear-gradient(to right,#e5e5e5,#c7c6c6,#fffdfb,#ff8c19,#f06060, #f34040);
   background-size: 250%;
   background-position: left;
   color: #ffd277;
@@ -298,18 +310,74 @@ form button:active {
   cursor: pointer;
   transition-duration: 1s;
   overflow: hidden;
+  font-weight: 700;
+  font-size: 16px;
 }
 
-.Btn::before {
+.Btn-signup::before {
   position: absolute;
-  content: "Login";
-  color: #ffd277;
+  content: "Sign up";
+  color: #ffc042;
   display: flex;
   align-items: center;
   justify-content: center;
   width: 97%;
   height: 90%;
-  border-radius: 8px;
+  border-radius: 10px;
+  transition-duration: 1s;
+  background-color: rgba(0, 0, 0, 0.842);
+  background-size: 200%;
+}
+
+.Btn-signup:hover {
+  background-position: right;
+  transition-duration: 1s;
+}
+
+.Btn-signup:hover::before {
+  background-position: right;
+  transition-duration: 0.1s;
+}
+
+.Btn-signup:active {
+  transform: scale(0.9);
+  transition-duration: 0.4s;
+}
+
+.Btn {
+  width: 250px;
+  padding-top: 2px;
+  padding-left: 2px;
+  padding-right: 2px;
+  height: 45px;
+  border: none;
+  border-top: 8px;
+  border-radius: 10px;
+  background: linear-gradient(to right,#e5e5e5,#c7c6c6,#fffdfb,#ff8c19,#f06060, #f34040);
+  background-size: 250%;
+  background-position: left;
+  color: #ffd277;
+  position: relative;
+  display: flex;
+  align-items: right;
+  justify-content: center;
+  cursor: pointer;
+  transition-duration: 1s;
+  overflow: hidden;
+  font-weight: 700;
+  font-size: 16px;
+}
+
+.Btn::before {
+  position: absolute;
+  content: "Login";
+  color: #ffc042;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 97%;
+  height: 90%;
+  border-radius: 10px;
   transition-duration: 1s;
   background-color: rgba(0, 0, 0, 0.842);
   background-size: 200%;
@@ -326,9 +394,20 @@ form button:active {
 }
 
 .Btn:active {
-  transform: scale(0.8);
+  transform: scale(0.9);
+  transition-duration: 0.4s;
 }
 
+
+ .icons {
+  position: absolute;
+  left: 225px; /* Align to the right */
+  top: 50%;
+  transform: translateY(-50%);
+  color: #9b9b9b; 
+  font-size: 1.2em; 
+  pointer-events: none; /* Ensures that the icon doesn't interfere with input clicks */
+}
 
 @media (max-width: 800px) {
   #header_container {
